# chi-my-diff

./: .gitignore  CMakeLists.txt  IPSolver.tar  README.md  test.cc
CFEMDiffSolver/: cfem_diffusion_bndry.h  cfem_diffusion_solver.cc  cfem_diffusion_solver.h
CFEMDiffSolver/lua/: create_solver.cc  lua_utils.h  setproperty.cc
chi_build/: mesh.lua  square.lua
lua/: testapp_statusmess.cc
